test/negative/parse_missing_eq_var.mut
# Negative: missing equals in variable declaration
x: i64 10
